--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,11 +31,6 @@ h2 {
     color: black;
 }
 
-.flash-msg {
-    color: red;
-    font-weight: bold;
-}
-
 #map {
     height: 100vh;
 }
@@ -66,7 +61,7 @@ table, tr, td {
     font-weight: bold;
 }
 
-.hours-closed {
+.hours-closed, .flash-msg, .error {
     color: red;
     font-weight: bold;
 }
