Modified title for pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                 <a class="nav-link" href="/"><i class="bi bi-search"></i></a>
               </div>
               <div class="justify-content-center">
-                <a class="navbar-brand" href="/">Project Title</a>
+                <a class="navbar-brand" href="/">Cafetastic</a>
               </div>
               <div class="justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
