--- a/templates/details.html
+++ b/templates/details.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Cafe Finder - Details {% endblock %}
+{% block title %} Cafetastic - Details {% endblock %}
 
 {% block content %} 
 
