--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Cafe Finder - Profile{% endblock %}
+{% block title %} Cafetastic - Profile{% endblock %}
 
 {% block content %} 
 <!-- Beginning of container -->
