--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Cafe Finder {% endblock %}
+{% block title %} Cafetastic {% endblock %}
 
 {% block content %}
     <!-- Background image -->
