--- a/templates/results.html
+++ b/templates/results.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Cafe Finder - Results {% endblock %}
+{% block title %} Cafetastic - Results {% endblock %}
 
 {% block content %} 
 <div class="container">
