Updated upload form route

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -18,7 +18,7 @@
 
     <!-- Column #2: Update Profile Picture -->
     <div class="col-6 p-4">
-      <form action="/user-image" method="POST" enctype="multipart/form-data" id="profile-pic-form" name="profile-pic-form">
+      <form action="/upload-profile-pic" method="POST" enctype="multipart/form-data" id="profile-pic-form" name="profile-pic-form">
         <div class="mb-3">
           <!-- File upload -->
           <label for="login-email" class="form-label">Update Profile Picture</label>
