--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,13 +7,18 @@
     <div class="background">
         <div class="container">
             <div class="row justify-content-center">
-            <div class="col-12">
+            <div class="col-6">
+            <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center">
+              <div class="transparent-box">
+              <img src="static/img/svgs/logo.svg" class="logo">
+              <h1 class="app-name">Cafetastic</h1>
             <!-- Display search feature if user is logged in -->
             {% if login %}
               <!-- Cafe search form -->
-              <div name="search" id="search" class="d-flex flex-column min-vh-100 justify-content-center align-items-center form">
+              <div name="search" id="search">
                   <form id="querying" action="/cafes" method="POST">
-                  <h1>Find a cafe near you!</h1>
+                    <hr>
+                  <h1 class="pt-2 justify-content-center text-center">Find a cafe</h1>
                   <div class="mb-3">
                       <label for="zipcode" class="form-label">Zip Code</label>
                       <input type="text" class="form-control" id="zipcode" aria-describedby="Email" name=
@@ -34,8 +39,9 @@
             <!-- Display login form if user is not logged in -->
             {% else %}
               <!-- Login form -->
-              <div name="login" id="login" class="d-flex flex-column min-vh-100 justify-content-center align-items-center form">
-                <h1>Login</h1>
+              <div name="login" id="login">
+                <hr>
+                <h1 class="pt-2 justify-content-center text-center">Login</h1>
                 <!-- Flash messages -->
                 {% for msg in get_flashed_messages() %}
                   <p class="flash-msg">
@@ -56,9 +62,11 @@
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </form>
                   <!-- Button to display registration form -->
-                  <a href="#" id="create-account">Create an account</a>
+                  <a href="#" id="create-account" class="p-2 d-flex justify-content-center text-center">Create an account</a>
                 </div>
             {% endif %}
+          </div>
+          </div>
             </div>
             </div>
         </div>
