--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,12 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/static/css/style.css">
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300&display=swap" rel="stylesheet">
         <!-- Block for more head content -->
         {% block head %} {% endblock %}
     </head>
@@ -17,7 +23,7 @@
     <body>
       <!-- Display navbar only if user is logged in -->
       {% if login %}
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <div class="navbar-nav">
                 <a class="nav-link" href="/"><i class="bi bi-search"></i></a>
