--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,7 +11,7 @@
             <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center">
               <div class="transparent-box">
               <img src="static/img/svgs/logo.svg" class="logo">
-              <h1 class="app-name">Cafetastic</h1>
+              <h1 class="app-name text-center">Cafetastic</h1>
             <!-- Display search feature if user is logged in -->
             {% if login %}
               <!-- Cafe search form -->
@@ -19,6 +19,12 @@
                   <form id="querying" action="/cafes" method="POST">
                     <hr>
                   <h1 class="pt-2 justify-content-center text-center">Find a cafe</h1>
+                  <!-- Flash messages -->
+                  {% for msg in get_flashed_messages() %}
+                    <p class="flash-msg">
+                    {{ msg }}
+                    </p>
+                  {% endfor %}
                   <div class="mb-3">
                       <label for="zipcode" class="form-label">Zip Code</label>
                       <input type="text" class="form-control" id="zipcode" aria-describedby="Email" name=
@@ -36,6 +42,7 @@
                   </form>
               </div>
               <!-- End cafe search form -->
+
             <!-- Display login form if user is not logged in -->
             {% else %}
               <!-- Login form -->
@@ -64,6 +71,7 @@
                   <!-- Button to display registration form -->
                   <a href="#" id="create-account" class="p-2 d-flex justify-content-center text-center">Create an account</a>
                 </div>
+                <!-- End login form -->
             {% endif %}
           </div>
           </div>
