--- a/templates/results.html
+++ b/templates/results.html
@@ -4,7 +4,9 @@
 
 {% block content %} 
 <!-- Display background image -->
-<div class="background">
+  {% block background %}
+  <div class="background">
+  {% endblock %}
 <div class="container-fluid" id="cafe-results">
   <div class="row">
     <!-- Column #1: Google Map -->
@@ -25,7 +27,7 @@
         <div class="col-4 d-flex flex-column min-vh-100 justify-content-center align-items-center" id="info">
           <div class="cafe-result text-center">
             <p><img class="cafe_photo" src="{{ cafes[i].image_url }}" /></p>
-            <h1><a href="/cafes/{{ cafes[i].id }}">{{ cafes[i].name }}</a></h1>
+            <h2><a href="/cafes/{{ cafes[i].id }}">{{ cafes[i].name }}</a></h2>
             <p class="cafe-address">{{ cafes[i].location.address1 }}</p>
             <p class="cafe-address">{{ cafes[i].location.city }}, {{ cafes[i].location.state }} {{ cafes[i].location.zip_code }}</p>
             <p class="cafe-address">{{ cafes[i].display_phone }}</p>
@@ -35,7 +37,7 @@
           <!-- DIV inside the column -->
           <div class="cafe-result text-center">
             <p><img class="cafe_photo" src="{{ cafes[i].image_url }}" /></p>
-            <h1><a href="/cafes/{{ cafes[i].id }}">{{ cafes[i].name }}</a></h1>
+            <h2><a href="/cafes/{{ cafes[i].id }}">{{ cafes[i].name }}</a></h2>
             <p class="cafe-address">{{ cafes[i].location.address1 }}</p>
             <p class="cafe-address">{{ cafes[i].location.city }}, {{ cafes[i].location.state }} {{ cafes[i].location.zip_code }}</p>
             <p class="cafe-address">{{ cafes[i].display_phone }}</p>
