Organized, cleaned up, added

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,60 +1,120 @@
+/* Basics */
+
 body, html {
     height: 100%;
     font-family: 'Karla', sans-serif;
 }
 
-#favorite, #heart {
-    color: red;
-    cursor: pointer;
-}
-.reviewer_photo {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
+footer { 
+    vertical-align: top;
 }
 
-.w-100 {
-    max-height: 1000px;
-    object-fit: cover;
+.background {
+    background-size: cover;
 }
 
-.cafe_photo {
-    width: 400px;
-    height: 300px;
-    border-radius: 30px;
+.logo {
+    width: 128px;
+    height: 128px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.fav-cafe-photo {
-    width: 500px;
-    height: 400px;
-    border-radius: 30px;
-}
+/* Headers */
 
-.fav-cafe {
-    padding: 20px;
-}
-
-h1 {
+h2 {
     color: #2E3A44;
     font-family: 'Lora', serif;
 }
 
-#map {
-    height: 50vh;
+.app-name {
+    font-size: 56px;
+    font-family: 'Outfit', sans-serif;
+    color: #35251C;
 }
 
-#cafe_map {
-    height: 50vh;
+.profile-title {
+    font-size: 24px;
+}
+
+/* Navbar */
+
+.navbar {
+    background-color: #C5A662;
+    font-size: 20px;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: #000;
+}
+
+/* Forms */
+
+.transparent-box {
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 25px;
+    padding: 100px; 
+}
+
+.form-box {
+    width: 400px;
+}
+
+/* Links */
+
+a, a:hover {
+    text-decoration: none;
+    color: #AE724C;
+}
+
+.bold-link {
+    color: #35251C;
+    font-weight: bold;
+}
+
+.bold-link:visited {
+    color: #35251C;
+}
+
+.bold-link:hover {
+    color: #AE724C;
+}
+
+/* Buttons */
+
+.btn-primary {
+    color: black;
+    border-color: #AE724C;
+    background-color: #AE724C;
+}
+
+.btn-primary:hover {
+    border-color: #AE724C;
+    background-color: #AE724C;
+}
+
+/* Favorites */
+
+#favorite, #heart {
+    color: red;
+    cursor: pointer;
 }
 
 .bi-star-fill, .bi-star-half {
     color: #FFC300;
 }
 
-.reviewer {
-    display: inline-block;
+/* Details Page */
+
+/* Photo Carousel */
+
+.w-100 {
+    max-height: 1000px;
+    object-fit: cover;
 }
+
+/* Cafe Hours Table */
 
 th { 
     text-align: center;
@@ -75,93 +135,87 @@ table, tr, td {
     font-weight: bold;
 }
 
-.background {
-    background-size: cover;
+.flash-msg {
+    text-align: center;
 }
 
-.chart rect:first-of-type {
-    color: #fff;
-    stroke: #3994b6;
-    fill: white;
-  }
-  
-  text:first-of-type {
-    fill: #3994b6;
-    font-family: sans-serif;
-    font-size: 12px;
-  }
-  
-  .chart rect:nth-of-type(2) {
-    color: #fff;
-    stroke: transparent;
-    fill: #3994b6;
-  }
-  
-  text:nth-of-type(2) {
-    fill: #a8d4e4;
-    font-family: sans-serif;
-    font-size: 12px;
-  }
+/* Rating Stars */
 
-  .edit-form {
-      display: none;
-      padding-top: 10px;
-  }
-
-  span.stars, span.stars span {
+span.stars, span.stars span {
     display: block;
     background: url(/static/img/svgs/star.svg) 0 0 repeat-x;
     width: 80px;
     height: 16px;
     background-size: 16px 16px;
-  }
+}
   
-  span.stars span {
+span.stars span {
     background-position: 0 0;
     background-image: url(/static/img/svgs/star-fill.svg);
-  }
+}
 
-  .logo {
-    width: 128px;
-    height: 128px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
+/* Reviews */
 
-  .app-name {
-    font-family: 'Outfit', sans-serif;
-    color: #35251C;
-  }
-
-  .navbar {
+.accordion-button:not(.collapsed) {
     background-color: #C5A662;
-    font-size: 20px;
-  }
-
-  .btn-primary {
     color: black;
-    border-color: #AE724C;
-    background-color: #AE724C;
-  }
+}
 
-  a {
-      text-decoration: none;
-      color: #AE724C;
-  }
+.accordion-button:after {
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000000'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
+}
 
-  .transparent-box {
-      background: rgba(255, 255, 255, 0.3);
-      border-radius: 25px;
-      padding: 100px; 
-  }
+#my-review, .review {
+    padding: 20px;
+    margin: 1rem 0 1rem 0;
+    background-color: #efefef;
+    border-radius: 30px;
+}
 
-  .form-box {
+.reviewer {
+    display: inline-block;
+}
+
+.reviewer_photo {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+
+.edit-form {
+    display: none;
+    padding-top: 10px;
+}
+
+/* Maps */
+
+#map {
+    height: 50vh;
+}
+
+#cafe_map {
+    height: 50vh;
+}
+
+/* Profile Page */
+
+.fav-cafe-photo {
     width: 400px;
-  }
+    height: 300px;
+    border-radius: 30px;
+}
 
-  footer { 
-      vertical-align: top
+.fav-cafe, .reviewed-cafe {
+    padding: 20px;
+}
+
+/* Results Page */
+
+.cafe_photo {
+    width: 400px;
+    height: 300px;
+    border-radius: 30px;
 }
 
 .cafe-result {
@@ -175,31 +229,3 @@ table, tr, td {
 .cafe-address {
     margin-bottom: 0px;
 }
-
-.button-text {
-    color: black;
-}
-
-#my-review, .review {
-    padding: 20px;
-    margin: 1rem 0 1rem 0;
-    background-color: #efefef;
-    border-radius: 30px;
-}
-
-.accordion-button:not(.collapsed) {
-    background-color: #C5A662;
-    color: black;
-}
-
-.accordion-button:after {
-    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000000'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
-  }
-
-/* #cafe-results {
-    overflow: hidden;
-    height: 100%;
-    display: flex; 
-    flex-direction: column;
-
-} */
