Adjusted carousel timing

--- a/templates/details.html
+++ b/templates/details.html
@@ -14,19 +14,19 @@
     <div class="carousel-inner">
 
       <!-- Carousel item 1: photo 1 -->
-      <div class="carousel-item">
+      <div class="carousel-item" data-bs-interval="2500">
         <img src="{{ yelp_cafe.photos[0] }}" class="d-block w-100" alt="...">
       </div>
       <!-- End of carousel item 1 -->
 
       <!-- Carousel item 2: photo 2 -->
-      <div class="carousel-item active">
+      <div class="carousel-item active" data-bs-interval="2500">
         <img src="{{ yelp_cafe.photos[1] }}" class="d-block w-100" alt="...">
       </div>
       <!-- End of carousel item 2 -->
 
       <!-- Carousel item 3: photo 3 -->
-      <div class="carousel-item">
+      <div class="carousel-item" data-bs-interval="2500">
         <img src="{{ yelp_cafe.photos[2] }}" class="d-block w-100" alt="...">
       </div>
       <!-- End of carousel item 3 -->
