Added bold Google Font; Cleaned up Google Fonts link

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,9 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/static/css/style.css">
         <!-- Google Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com"> 
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@500&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;700&family=Lora&family=Outfit:wght@500&display=swap" rel="stylesheet">
         <!-- Block for more head content -->
         {% block head %} {% endblock %}
     </head>
