--- a/templates/profile.html
+++ b/templates/profile.html
@@ -36,7 +36,7 @@
   <div class="row">
 
     <!-- Column #1: Favorite Cafes -->
-    <div class="col-6 d-flex flex-column min-vh-100 justify-content-center align-items-center">
+    <div class="col-6 d-flex flex-column min-vh-100 align-items-center">
       <h1 class="text-center">Favorites</h1>
 
       <!-- If user has favorited a cafe -->
